[package]
name = "draco-gltf-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gltf = { version = "1.4.1", features = ["import", "extensions", "utils"] }
thiserror = "1"
draco_decoder = "0.0.11"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.47.1", features = ["full"] }